--- a/src/pages/Getmygovt/Getmygovt.css
+++ b/src/pages/Getmygovt/Getmygovt.css
@@ -34,7 +34,6 @@
     width: 100vw;
     display: flex;
     flex-direction: column;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
   }
@@ -254,3 +253,8 @@
       align-items: end;
       margin-top: 20px;
     } 
+    .nama{
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-evenly;
+    }
